# urpobotti

./: .gitignore  LICENSE  README.md
arduino/MinIMU9AHRS_und_xv/: MinIMU9AHRS.h  MinIMU9AHRS_und_xv.ino
arduino/backemf_test/: backemf_test.ino
arduino/motorctrl/: motorctrl.ino  nopidtask.h  pidtask.h  serialtask.h
arduino/motors_ahrs/: ahrstask.h  motors_ahrs.ino
arduino/pid_autotune/: pid_autotune.ino
arduino/sonars/: pin_definitions.txt
arduino/ultrasounder/: ultrasounder.ino
bash/: start_motorctrl.sh  start_pinger.sh
c/: Makefile  pixy_test.c
cpp/pixyzmq/: .gitignore  CMakeLists.txt  framegrab.cpp  pixyzmq.cpp
cpp/pixyzmq/cmake/: Findlibzmq1.cmake
cpp/urpo_IMU/: .gitignore  Makefile  RTIMULib_ZMQ_server.cpp  URPO_IMU.ini  ZMQ_test_client.py
cpp/urpo_IMU/Output/: RTIMULib_ZMQ_server
python/: 3d.py  3d_compass.py  brains.py  hiddrive.py  joystickdrive.py  launcher.py  motorctrl.py  navidata.py  pinger.py  pixy_server.py  pixy_test_listener.py  remote_zmqslam.py  speed_cli.py  start_motorctrl.sh  start_pinger.sh  start_services.sh  sub_test.py  visualizer.py  zmqlidar.py  zmqslam.py
upstart/: bluetooth.conf  ds4drv.conf  motorctrl.conf  pinger.conf  pixyzmq.conf  uim.conf
